fixed main toolbar responsiveness

--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -3,9 +3,9 @@
         <button mat-icon-button (click)="snav.toggle(); isMenuActive = !isMenuActive">
             <mat-icon>{{ isMenuActive ? 'clear' : 'menu' }}</mat-icon>
         </button>
-        <h1 class="app-name"><a routerLink="/">Everest</a></h1>
+        <h1 class="app-name" *ngIf="!mobileQuery.matches"><a routerLink="/">Everest</a></h1>
         
-        <app-search class="search"></app-search>
+        <app-search class="app-search"></app-search>
 
         <div class="profile-container">
             <div class="profile-image" [matMenuTriggerFor]="menu"
