fixed image placeholder not showing

--- a/src/app/components/user-image/user-image.component.html
+++ b/src/app/components/user-image/user-image.component.html
@@ -4,7 +4,7 @@
   [ngClass]="[imageSizeClass, clickableClass]"
   [ngStyle]="url"
 >
-  <span *ngIf="image === '' || image === null">
+  <span *ngIf="(image === '' || image === null) && placeholder">
     {{ placeholder }}
   </span>
 </div>
