--- a/src/app/general/dialogs/atc/mini-collection/mini-collection.component.html
+++ b/src/app/general/dialogs/atc/mini-collection/mini-collection.component.html
@@ -12,7 +12,7 @@
 
   <p>
     {{ data.title }}
-    <span class="in-this-collection" *ngIf="isInThisCollection">
+    <span class="in-this-collection" *ngIf="data.inThisCollection.length > 0">
       In this collection
     </span>
   </p>
