changed change password and privacy expansion look

--- a/src/app/pages/profile/change-password/change-password.component.html
+++ b/src/app/pages/profile/change-password/change-password.component.html
@@ -5,14 +5,14 @@
       class="section-header-with-icon"
       (click)="showPasswordForm = !showPasswordForm"
     >
-      <p>Change Password</p>
-      <div
-        [ngClass]="{
-          'icon-container-closed': !showPasswordForm,
-          'icon-container-open': showPasswordForm
-        }"
-      >
+      <p class="left">
         <fa-icon [icon]="faKey"></fa-icon>
+        <span>Change Password</span>
+      </p>
+      <div class="right">
+        <fa-icon
+          [icon]="showPasswordForm ? faChevronUp : faChevronDown"
+        ></fa-icon>
       </div>
     </div>
     <div class="section-content" *ngIf="showPasswordForm">
