fixed atc scroll issue. fixed look of bio in profile summary

--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -7,9 +7,8 @@
       [lastName]="lastName"
       [username]="username"
     ></app-user-image>
-    <div class="name-bio">
+    <div class="name">
       <h4>{{ firstName }} {{ lastName }}</h4>
-      <p [ngClass]="{ 'greyed-out': !bio }">{{ bio ? bio : "No bio added" }}</p>
     </div>
   </div>
 
@@ -62,5 +61,10 @@
         {{ interest }}
       </p>
     </div>
+  </div>
+
+  <div class="bio">
+    <h4>Bio</h4>
+    <p [ngClass]="{ 'greyed-out': !bio }">{{ bio ? bio : "No bio added" }}</p>
   </div>
 </div>
