--- a/src/assets/styles/section-container.scss
+++ b/src/assets/styles/section-container.scss
@@ -4,7 +4,7 @@
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0 8px 20px 0 rgba(218, 224, 235, 0.6);
-    background-color: #f6f8fa;
+    background-color: #ffffff;
     padding: 2px 15px 15px 15px;
     max-width: 600px;
     margin-left: auto;
