minor change to look of mini collection

--- a/src/app/general/dialogs/atc/atc.component.html
+++ b/src/app/general/dialogs/atc/atc.component.html
@@ -50,7 +50,7 @@
 
           <div class="custom-input">
             <div class="label-container">
-              <label>Collection Note</label>
+              <label>Collection Description</label>
             </div>
             <div class="input-container">
               <textarea
@@ -60,7 +60,7 @@
                 cdkAutosizeMaxRows="5"
                 type="text"
                 formControlName="description"
-                placeholder="Add note for this post..."
+                placeholder="Describe this collection..."
               ></textarea>
             </div>
           </div>
