--- a/src/app/general/dialogs/atc/mini-collection/mini-collection.component.scss
+++ b/src/app/general/dialogs/atc/mini-collection/mini-collection.component.scss
@@ -21,7 +21,7 @@
   border-radius: 5px;
   cursor: pointer;
   display: grid;
-  grid-template-columns: 50px 1fr;
+  // grid-template-columns: 50px 1fr;
   grid-column-gap: 15px;
   padding: 5px;
   transition: background-color 0.2s ease-in-out;
@@ -50,16 +50,20 @@
   p {
     align-self: center;
     margin: 0;
-
-    .in-this-collection {
-      background: #ffac15;
-      border-radius: 3px;
-      color: white;
-      padding: 3px 0 1px 6px;
-      display: block;
-      font-size: 12px;
-      font-family: "Hind", sans-serif;
-      width: 90px;
-    }
   }
+
+  .in-this-collection {
+    color: rgb(42, 190, 42);
+    align-self: center;
+    justify-self: center;
+    font-size: 20px;
+  }
+}
+
+.two-columns {
+  grid-template-columns: 50px 1fr;
+}
+
+.three-columns {
+  grid-template-columns: 50px 1fr 25px;
 }
