updated user-image component, profile-summary component, etc.

--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -24,7 +24,7 @@
       align-self: center;
       h4 {
         margin-top: 0;
-        margin-bottom: 0;
+        margin-bottom: 5px;
       }
     }
   }
