--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -1,14 +1,19 @@
 <div class="summary-parent" *ngIf="!loading">
   <div class="columns">
     <app-user-image
-      [image]="profileImage"
+      [userData]="{
+        image: profileImage,
+        firstName: firstName,
+        lastName: lastName,
+        username: username
+      }"
       size="md"
-      [firstName]="firstName"
-      [lastName]="lastName"
-      [username]="username"
     ></app-user-image>
     <div class="name">
       <h4>{{ firstName }} {{ lastName }}</h4>
+      <div class="follow" *ngIf="!userData.isSelf">
+        <button mat-flat-button color="primary">Follow</button>
+      </div>
     </div>
   </div>
 
@@ -41,10 +46,12 @@
     <div *ngIf="followerCount > 0" class="follower-images-array">
       <app-user-image
         *ngFor="let follower of followers"
-        [image]="follower.smImage ? follower.smImage : ''"
-        [firstName]="follower.firstName"
-        [lastName]="follower.lastName"
-        [username]="follower.username"
+        [userData]="{
+          image: follower.smImage ? follower.smImage : '',
+          firstName: follower.firstName,
+          lastName: follower.lastName,
+          username: follower.username
+        }"
         size="xs"
       ></app-user-image>
       <div *ngIf="followerCount > 4" class="remaining-followers">
