--- a/src/app/components/user-image/user-image.component.scss
+++ b/src/app/components/user-image/user-image.component.scss
@@ -6,6 +6,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  transition: border 0.2s ease-in-out;
 
   span {
     color: #4a4a4a;
@@ -40,4 +41,7 @@
 
 .clickable {
   cursor: pointer;
+  &:hover {
+    border-color: #481a89;
+  }
 }
