--- a/src/app/general/post/comment/comment.component.html
+++ b/src/app/general/post/comment/comment.component.html
@@ -3,15 +3,17 @@
   <div class="comment" *ngFor="let comment of allComments">
     <!-- <div class="image-container" [ngStyle]="{ 'background-image': 'url(' + image + ')' }"></div> -->
     <app-user-image
-      [image]="comment.image"
-      [firstName]="comment.firstName"
-      [lastName]="comment.lastName"
-      [username]="comment.username"
+      [userData]="{
+        image: comment.image,
+        firstName: comment.firstName,
+        lastName: comment.lastName,
+        username: comment.username
+      }"
       size="xs"
     ></app-user-image>
     <div class="text-container">
-      <p class="username"
-        ><strong>{{ comment.username }}</strong>
+      <p class="username">
+        <strong>{{ comment.username }}</strong>
       </p>
       <small class="comment-timestamp">{{
         formatTime(comment.timestamp)
