--- a/src/app/general/post/post.component.html
+++ b/src/app/general/post/post.component.html
@@ -7,10 +7,12 @@
       [ngStyle]="{ 'background-image': 'url(' + userImage + ')' }"
     ></div> -->
     <app-user-image
-      [image]="userImage[0]"
-      [firstName]="firstName[0]"
-      [lastName]="lastName[0]"
-      [username]="username"
+      [userData]="{
+        image: userImage[0],
+        firstName: firstName[0],
+        lastName: lastName[0],
+        username: username
+      }"
       size="sm"
     >
     </app-user-image>
@@ -125,10 +127,7 @@
     </button>
   </div>
 
-  <app-comment
-    *ngIf="showComments"
-    [resourceId]="id"
-  ></app-comment>
+  <app-comment *ngIf="showComments" [resourceId]="id"></app-comment>
 
   <!-- * Add Comment -->
   <div class="add-comment">
