--- a/src/app/layouts/main/main.component.scss
+++ b/src/app/layouts/main/main.component.scss
@@ -53,16 +53,7 @@
 		grid-column-end: end;
 
 		.profile-image {
-			background-size: cover;
-			background-position: center center;
-			background-repeat: no-repeat;
-			box-shadow: 0 8px 20px 0 rgba(145, 145, 145, 0.6);
-			width: 40px;
-			height: 40px;
-			border: 2px solid white;
-			border-radius: 50%;
 			float: right;
-			cursor: pointer;
 		}
 	}
 
@@ -86,6 +77,7 @@
 			text-transform: uppercase;
 			letter-spacing: 10px;
 			text-decoration: none;
+			display: none;
 		}
 	}
 
