--- a/src/app/general/collection/collection.component.html
+++ b/src/app/general/collection/collection.component.html
@@ -12,11 +12,12 @@
   </div>
   <div class="collection" (click)="goToCollection()">
     <div class="main" [ngStyle]="{'background-image': 'url('+ image1 +')'}"></div>
-    <div class="subs">
-      <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
+    <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
       <div class="block" [ngStyle]="{'background-image': 'url('+ image3 +')'}"></div>
       <div class="block" [ngStyle]="{'background-image': 'url('+ image4 +')'}"></div>
-    </div>
+    <!-- <div class="subs">
+      
+    </div> -->
   </div>
 </div>
 
