--- a/src/app/general/collection/collection.component.scss
+++ b/src/app/general/collection/collection.component.scss
@@ -1,7 +1,9 @@
 $main-block-width: 12.12rem;
 $main-block-height: 12.12rem;
-$block-width: 7.2rem;
-$block-height: 6.2rem;
+$max-block-width: 7.2rem;
+$max-block-height: 6.2rem;
+$min-block-width: 5rem;
+$min-block-height: 5rem;
 $block-radius: 10px;
 $block-border: 5px solid white;
 
@@ -14,12 +16,12 @@ $block-border: 5px solid white;
   display: inline-block;
   transition: all 0.2s ease-in-out;
   margin-bottom: 25px;
-  margin-right: 15px;
+  width: 100%;
 
   &:hover {
-		box-shadow: 0 22px 32px 0 rgba(197, 197, 197, 0.6);
+    box-shadow: 0 22px 32px 0 rgba(197, 197, 197, 0.6);
   }
-  
+
   .header {
     display: grid;
     grid-template-columns: auto 30px;
@@ -48,8 +50,12 @@ $block-border: 5px solid white;
   }
 
   .collection {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 5px 5px 5px;
     .main {
-      display: block;
+      grid-column-start: 1;
+      grid-column-end: 4;
       background-color: rgba(231, 231, 231, 1);
       background-size: cover;
       background-repeat: no-repeat;
@@ -59,30 +65,29 @@ $block-border: 5px solid white;
       height: $main-block-height;
     }
 
-    .subs {
-      display: inline-flex;
-      .block {
-        background-color: rgba(231, 231, 231, 1);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        width: $block-width;
-        height: $block-height;
-  
-        &:nth-child(1) {
-          border-left: $block-border;
-          border-right: $block-border;
-          border-bottom-left-radius: $block-radius;
-        }
-  
-        &:nth-child(2) {
-          border-right: $block-border;
-        }
-  
-        &:nth-child(3) {
-          border-right: $block-border;
-          border-bottom-right-radius: $block-radius;
-        }
+    .block {
+      background-color: rgba(231, 231, 231, 1);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      // max-width: $max-block-width;
+      max-height: $max-block-height;
+      min-width: $min-block-width;
+      min-height: $min-block-height;
+
+      &:nth-child(1) {
+        border-left: $block-border;
+        border-right: $block-border;
+        border-bottom-left-radius: $block-radius;
+      }
+
+      &:nth-child(2) {
+        border-right: $block-border;
+      }
+
+      &:nth-child(3) {
+        border-right: $block-border;
+        border-bottom-right-radius: $block-radius;
       }
     }
   }
