--- a/src/app/pages/manage/manage-collections/manage-collections.component.html
+++ b/src/app/pages/manage/manage-collections/manage-collections.component.html
@@ -1,9 +1,11 @@
-<div class="section-container">
-  <div class="list-of-collections" *ngIf="!isLoading">
-    <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
-  </div>
+<!-- <div class="section-container">
+  
+</div> -->
 
-  <div *ngIf="collections && collections.length === 0">
-    You haven't made a collection yet
-  </div>
+<div class="list-of-collections" *ngIf="!isLoading">
+  <app-collection *ngFor="let collection of collections" [data]="collection"></app-collection>
+</div>
+
+<div *ngIf="collections && collections.length === 0">
+  You haven't made a collection yet
 </div>
