updated profile summary component

--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -20,8 +20,8 @@
   <div class="boxes">
     <div class="box articles">
       <div>
-        <h3>{{ articleCount }}</h3>
-        <span>Articles</span>
+        <h3>{{ collectionCount }}</h3>
+        <span>Collections</span>
       </div>
     </div>
 
