--- a/src/app/components/profile-summary/profile-summary.component.html
+++ b/src/app/components/profile-summary/profile-summary.component.html
@@ -11,8 +11,21 @@
     ></app-user-image>
     <div class="name">
       <h4>{{ firstName }} {{ lastName }}</h4>
-      <div class="follow" *ngIf="!userData.isSelf">
-        <button mat-flat-button color="primary">Follow</button>
+      <div class="follow-unfollow-container" *ngIf="!userData.isSelf">
+        <button
+          class="follow"
+          *ngIf="!isLoggedInUserFollowingParamUser"
+          (click)="followUser()"
+        >
+          Follow
+        </button>
+        <button
+          class="unfollow"
+          *ngIf="isLoggedInUserFollowingParamUser"
+          (click)="unfollowUser()"
+        >
+          Unfollow
+        </button>
       </div>
     </div>
   </div>
