--- a/src/app/components/profile-summary/profile-summary.component.scss
+++ b/src/app/components/profile-summary/profile-summary.component.scss
@@ -1,3 +1,12 @@
+%follow-button-base {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
 .summary-parent {
   background-color: white;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
@@ -25,6 +34,37 @@
       h4 {
         margin-top: 0;
         margin-bottom: 5px;
+      }
+
+      .follow-unfollow-container {
+        .follow {
+          @extend %follow-button-base;
+          background-color: #481a89;
+          color: white;
+
+          &:hover {
+            background-color: #5d25ac;
+          }
+
+          &:active {
+            background-color: #2e1157;
+          }
+        }
+
+        .unfollow {
+          @extend %follow-button-base;
+          background-color: transparent;
+          color: #2d2d2d;
+
+          &:hover {
+            border-color: #481a89;
+          }
+
+          &:active {
+            background-color: #703eb6;
+            color: white;
+          }
+        }
       }
     }
   }
