--- a/src/assets/styles/no-auth-layout.scss
+++ b/src/assets/styles/no-auth-layout.scss
@@ -69,7 +69,7 @@
 
 	.right {
 		display: none;
-		background-image: url(assets/mountains.webp);
+		background-image: url(../mountains.webp);
 		background-position: center center;
 		background-size: cover;
 		background-repeat: no-repeat;
