--- a/src/app/general/collection/collection-options/collection-options.component.html
+++ b/src/app/general/collection/collection-options/collection-options.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<div class="popover-item" matRipple (click)="openEditCollectionDialog()">
   <div class="top">
     <fa-icon [icon]="faEdit"></fa-icon>
     <span>Edit Collection</span>
