--- a/src/app/general/collection/edit-collection/edit-collection.component.html
+++ b/src/app/general/collection/edit-collection/edit-collection.component.html
@@ -1,1 +1,65 @@
-<p>edit-collection works!</p>
+<p class="dialog-title">
+  <strong>Edit Collection</strong>
+</p>
+<div mat-dialog-content>
+  <div class="columns">
+    <div class="left">
+      <div class="parent">
+        <form [formGroup]="form">
+          <div class="custom-input">
+            <div class="label-container">
+              <label>Collection Title</label>
+            </div>
+            <div class="input-container">
+              <input
+                type="text"
+                formControlName="title"
+                placeholder="Name your collection"
+              />
+            </div>
+          </div>
+
+          <div class="custom-input">
+            <div class="label-container">
+              <label>Collection Description</label>
+            </div>
+            <div class="input-container">
+              <textarea
+                cdkTextareaAutosize
+                #autosize="cdkTextareaAutosize"
+                cdkAutosizeMinRows="3"
+                cdkAutosizeMaxRows="5"
+                type="text"
+                formControlName="description"
+                placeholder="Describe your collection..."
+              ></textarea>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="bottom" *ngIf="!isLoading">
+      <div class="delete-resource-array">
+        <div *ngFor="let resource of resources" class="resource">
+          <div
+            class="resource-image"
+            [ngStyle]="{ 'background-image': 'url(' + resource.mdImage.link + ')' }"
+          >
+            <div class="delete-button">
+              <fa-icon [icon]="faTimesCircle"></fa-icon>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div mat-dialog-actions>
+  <button mat-stroked-button>Delete</button>
+  <button mat-stroked-button (click)="cancel()">Cancel</button>
+  <button mat-flat-button color="primary" cdkFocusInitial>Save</button>
+</div>
