working on delete resource from collection function

--- a/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.html
+++ b/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.html
@@ -8,7 +8,7 @@
     class="resource-image"
     [ngStyle]="{ 'background-image': 'url(' + data.mdImage.link + ')' }"
   >
-    <div class="delete-button">
+    <div class="delete-button" (click)="deleteResourceFromCollection()">
       <fa-icon [icon]="faTimesCircle"></fa-icon>
     </div>
   </div>
