edit collection modal updated

--- a/src/app/general/collection/collection-options/collection-options.component.html
+++ b/src/app/general/collection/collection-options/collection-options.component.html
@@ -26,6 +26,17 @@
 
 <div class="popover-item" matRipple>
   <div class="top">
+    <fa-icon [icon]="faTrash"></fa-icon>
+    <span>Delete Collection</span>
+  </div>
+
+  <div class="bottom">
+    <small>Delete your collection</small>
+  </div>
+</div>
+
+<div class="popover-item" matRipple>
+  <div class="top">
     <fa-icon [icon]="faShare"></fa-icon>
     <span>Go to collection</span>
   </div>
