working on dc component

--- a/src/app/general/collection/collection-options/collection-options.component.html
+++ b/src/app/general/collection/collection-options/collection-options.component.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="popover-item" matRipple>
+<div class="popover-item" matRipple (click)="openDeleteCollectionDialog()">
   <div class="top">
     <fa-icon [icon]="faTrash"></fa-icon>
     <span>Delete Collection</span>
