--- a/src/app/general/dialogs/dc/dc.component.html
+++ b/src/app/general/dialogs/dc/dc.component.html
@@ -1,9 +1,32 @@
-<h1 mat-dialog-title>Delete Collection</h1>
+<div class="columns">
+  <div class="left">
+    <div class="icon-container">
+      <fa-icon [icon]="faTrash"></fa-icon>
+    </div>
+  </div>
+  <div class="right">
+    <p class="dialog-title">
+      <strong>Delete Collection</strong>
+    </p>
 
-<p>Are you sure you want to delete <strong>{{ data.title }}</strong></p>
+    <mat-dialog-content>
+      <p>
+        Are you sure you want to delete
+        <strong>{{ data.collectionData.title }}</strong
+        >?
+      </p>
+    </mat-dialog-content>
 
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-raised-button color="warn" (click)="onYesClick()" cdkFocusInitial>Ok</button>
+    <mat-dialog-actions align="end">
+      <button
+        mat-flat-button
+        color="warn"
+        (click)="onYesClick()"
+        cdkFocusInitial
+      >
+        Ok
+      </button>
+      <button mat-stroked-button (click)="onNoClick()">Cancel</button>
+    </mat-dialog-actions>
+  </div>
 </div>
-
