--- a/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
+++ b/src/app/general/collection/delete-resource-from-collection/delete-resource-from-collection.component.scss
@@ -18,9 +18,11 @@
     position: absolute;
     top: 5px;
     right: 5px;
-    width: 24px;
-    height: 24px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
+    background-color: white;
+    border: 2px solid white;
 
     fa-icon {
       color: #fe5045;
