--- a/src/app/general/collection/collection.component.html
+++ b/src/app/general/collection/collection.component.html
@@ -1,9 +1,14 @@
 <div class="collection-container" *ngIf="!isLoading" #origin>
   <div class="header">
     <div class="title-and-count">
-      <p class="collection-name">{{ data.title ? data.title : "Unset" | truncate:[truncateAmount] }}</p>
+      <p class="collection-name">
+        {{ data.title ? data.title : ("Unset" | truncate: [truncateAmount]) }}
+      </p>
       <div class="no-of-resources">
-        <small>{{ data.count }} {{ data.count >= 0 ? 'resource' : 'resources'}}</small>
+        <small
+          >{{ data.count }}
+          {{ data.count >= 0 ? "resource" : "resources" }}</small
+        >
       </div>
     </div>
     <button mat-icon-button (click)="show(origin)">
@@ -11,13 +16,22 @@
     </button>
   </div>
   <div class="collection" (click)="goToCollection()">
-    <div class="main" [ngStyle]="{'background-image': 'url('+ image1 +')'}"></div>
-    <div class="block" [ngStyle]="{'background-image': 'url('+ image2 +')'}"></div>
-      <div class="block" [ngStyle]="{'background-image': 'url('+ image3 +')'}"></div>
-      <div class="block" [ngStyle]="{'background-image': 'url('+ image4 +')'}"></div>
-    <!-- <div class="subs">
-      
-    </div> -->
+    <div
+      class="main"
+      [ngStyle]="{ 'background-image': 'url(' + image1 + ')' }"
+    ></div>
+    <div
+      class="block"
+      [ngStyle]="{ 'background-image': 'url(' + image2 + ')' }"
+    ></div>
+    <div
+      class="block"
+      [ngStyle]="{ 'background-image': 'url(' + image3 + ')' }"
+    ></div>
+    <div
+      class="block"
+      [ngStyle]="{ 'background-image': 'url(' + image4 + ')' }"
+    ></div>
   </div>
 </div>
 
