--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,8 +1,5 @@
-<!-- * Public Profile -->
-<app-public-profile *ngIf="!isSelf"></app-public-profile>
-<!-- * Edit Profile -->
-<app-edit-profile *ngIf="isSelf"></app-edit-profile>
+<app-edit-profile></app-edit-profile>
 <!-- * Change Password -->
-<app-change-password *ngIf="isSelf"></app-change-password>
+<app-change-password></app-change-password>
 <!-- * Delete Account -->
-<app-delete-account *ngIf="isSelf"></app-delete-account>
+<app-delete-account></app-delete-account>
