--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -47,7 +47,7 @@
         </a>
         <mat-divider></mat-divider>
         <a routerLink="/profile/settings" routerLinkActive="active-sidenav">
-          <fa-icon [icon]="faSquare"></fa-icon>&nbsp;&nbsp;Settings
+          <fa-icon [icon]="faCog"></fa-icon>&nbsp;&nbsp;Settings
         </a>
         <a (click)="logout()">
           <fa-icon [icon]="faSignOutAlt"></fa-icon>&nbsp;&nbsp;Logout
