fixed minor issue where placeholder wasn't showing for user image component

--- a/src/app/components/user-image/user-image.component.html
+++ b/src/app/components/user-image/user-image.component.html
@@ -4,7 +4,7 @@
   [ngClass]="[imageSizeClass, clickableClass]"
   [ngStyle]="url"
 >
-  <span *ngIf="(userData.image === '' || userData.image === null) && placeholder">
+  <span *ngIf="!userData.image && placeholder">
     {{ placeholder }}
   </span>
 </div>
